--- a/site-de-filmes/app/globals.css
+++ b/site-de-filmes/app/globals.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
   background-color: #141414;
-  color: #fff;
+  color: #ffffff;
 }
 
 h2 {
